--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "display": "standalone",
     "orientation": "portrait",
     "Scope": "/",
-    "start_url": "index.html#/inicio",
+    "start_url": "index.html",
     "icons": [{
             "src": "assets/icons/icon-72x72.png",
             "sizes": "72x72",
